[package]
name = "gym-rs"
version = "0.3.1"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "OpenAI's Gym written in pure Rust"
repository = "https://github.com/MathisWellmann/gym-rs"
readme = "README.md"
keywords = ["ai", "ml", "physical", "environment", "benchmark"]
categories = ["simulation", "science", "algorithms"]
exclude = ["img/"]

[lints.rust]
unused_imports = "warn"
unused_crate_dependencies = "warn"
missing_docs = "warn"
dead_code = "deny"

[lints.clippy]
all = "warn"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
log = "0.4.11"
derive-new = "0.7"
cosyne = { version = "0.3.2", optional = true }
sdl2 = { version = "0.37", default-features = false, features = ["static-link", "use-vcpkg", "gfx"] }
serde = { version = "1.0", features = ["derive"] }
derivative = { version = "2.2" }
nalgebra = "0.33"
ordered-float = { version = ">=3.9.1", features = ["serde", "rand"] }
num-traits = "0.2"

[features]
default = ["bundled"]
bundled = ["sdl2/bundled"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "16ee2ec"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
